# The-Checker-Mater

./: Cargo.lock.orig  Cargo.toml  Cargo.toml.orig  README.md  build.rs
src/: checkers_game.rs  game_data.rs  lib.rs  main.rs
src/game/: board.rs  data.rs  mod.rs
src/net/: interface.rs  mod.rs  net_loop.rs  net_utils.rs  status.rs
src/net/p2p/: communicate.rs  mod.rs  net_loop.rs  queue.rs
ui/: board.slint  connection_window.slint  game_window.slint  lan_prompt_window.slint  piece.slint  start_window.slint
