[package]
name = "the_checker_mater"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "game"


[dependencies]
slint = "1.5.1"         # GUI
tokio = "1.37.0"        # NET
serde = "1.0.198"       # Serialize and Deserialze data
ron = "0.8.1"           # Extension to Serde, for the .ron format
anyhow = "1.0.82"       # Error handling
thiserror = "1.0.59"    # Custom errors


[build-dependencies]
slint-build = "1.5.0"
