[package]
name = "the_checker_mater"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[dependencies]
slint = "1.5.1"                                         # GUI
tokio = { version = "1.37.0", features = ["full"] }     # Networking
local-ip-address = "0.6.1"                              # Getting the computers local IP
hex = "0.4.3"                                           # Encoding data into Hex strings
serde = { version = "1.0.198", features = ["derive"] }  # Serializing and Deserializing of Data
ron = "0.8.1"                                           # Extension to Serde, for the .ron format
anyhow = "1.0.82"                                       # Error handling
thiserror = "1.0.59"                                    # Custom errors
rand = "0.8.5"
lazy_static = "1.4.0"
futures = "0.3.30"


[build-dependencies]
slint-build = "1.5.0"
